fix path api
