# handlers/task_handler.go
@@ -22,19 +22,20 @@ func NewTaskHandler(s ports.TaskService, mdw *middleware.Middleware) *TaskHandle
 
 func (h *TaskHandler) TaskRoutes(router fiber.Router) {
 	versionOne := router.Group("v1")
-	versionTwo := router.Group("v2")
+	// versionTwo := router.Group("v2")
 
 	tasks := versionOne.Group("tasks")
-	tasksV2 := versionTwo.Group("tasks")
+	// tasksV2 := versionTwo.Group("tasks")
 
 	tasks.Get("/list", h.mdw.AuthCookieMiddleware(), h.GetListTasks)
 	tasks.Post("/create", h.mdw.AuthCookieMiddleware(), h.CreateTask)
 	tasks.Get("/:id", h.mdw.AuthCookieMiddleware(), h.GetTaskByID)
-	tasks.Put("/:id", h.mdw.AuthCookieMiddleware(), h.UpdateTask)
+	// tasks.Put("/:id", h.mdw.AuthCookieMiddleware(), h.UpdateTask)
+	tasks.Put("/:id", h.mdw.AuthCookieMiddleware(), h.PutTaskV2)
 	tasks.Delete("/:id", h.mdw.AuthCookieMiddleware(), h.DeleteTask)
 	tasks.Put("/:task_id/steps/:step_id", h.mdw.AuthCookieMiddleware(), h.UpdateStepStatusNote)
 
-	tasksV2.Put("/:id", h.mdw.AuthCookieMiddleware(), h.PutTaskV2)
+	// tasksV2.Put("/:id", h.mdw.AuthCookieMiddleware(), h.PutTaskV2)
 
 }
 
@@ -217,57 +218,57 @@ func (h *TaskHandler) GetTaskByID(c *fiber.Ctx) error {
 	})
 }
 
-// @Summary Update a task
-// @Description Update a task
-// @Tags Tasks
-// @Accept json
-// @Produce json
-// @Param id path string true "Task ID"
-// @Param request body dto.UpdateTaskRequest true "Update Task Request"
-// @Success 200 {object} dto.BaseResponse
-// @Failure 400 {object} dto.BaseResponse
-// @Failure 404 {object} dto.BaseResponse
-// @Failure 500 {object} dto.BaseResponse
-// @Router /v1/tasks/{id} [put]
-func (h *TaskHandler) UpdateTask(c *fiber.Ctx) error {
-	id := c.Params("id")
-	var req dto.UpdateTaskRequest
-	if err := c.BodyParser(&req); err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(dto.BaseResponse{
-			StatusCode: fiber.StatusBadRequest,
-			MessageEN:  "Invalid request body",
-			MessageTH:  "รูปแบบคำขอไม่ถูกต้อง",
-			Status:     "error",
-			Data:       nil,
-		})
-	}
-	claims, err := middleware.GetClaims(c)
-	if err != nil {
-		return c.Status(fiber.StatusUnauthorized).JSON(dto.BaseResponse{
-			StatusCode: fiber.StatusUnauthorized,
-			MessageEN:  "Unauthorized",
-			MessageTH:  "ไม่ได้รับอนุญาต",
-			Status:     "error",
-		})
-	}
-	errOnUpdate := h.svc.UpdateTask(c.Context(), id, req, claims.UserID)
-	if errOnUpdate != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(dto.BaseResponse{
-			StatusCode: fiber.StatusBadRequest,
-			MessageEN:  errOnUpdate.Error(),
-			MessageTH:  "ไม่สามารถอัปเดต Task ได้",
-			Status:     "error",
-			Data:       nil,
-		})
-	}
-	return c.Status(fiber.StatusOK).JSON(dto.BaseResponse{
-		StatusCode: fiber.StatusOK,
-		MessageEN:  "Task updated successfully",
-		MessageTH:  "อัปเดต Task สำเร็จ",
-		Status:     "success",
-		Data:       nil,
-	})
-}
+// // @Summary Update a task
+// // @Description Update a task
+// // @Tags Tasks
+// // @Accept json
+// // @Produce json
+// // @Param id path string true "Task ID"
+// // @Param request body dto.UpdateTaskRequest true "Update Task Request"
+// // @Success 200 {object} dto.BaseResponse
+// // @Failure 400 {object} dto.BaseResponse
+// // @Failure 404 {object} dto.BaseResponse
+// // @Failure 500 {object} dto.BaseResponse
+// // @Router /v1/tasks/{id} [put]
+// func (h *TaskHandler) UpdateTask(c *fiber.Ctx) error {
+// 	id := c.Params("id")
+// 	var req dto.UpdateTaskRequest
+// 	if err := c.BodyParser(&req); err != nil {
+// 		return c.Status(fiber.StatusBadRequest).JSON(dto.BaseResponse{
+// 			StatusCode: fiber.StatusBadRequest,
+// 			MessageEN:  "Invalid request body",
+// 			MessageTH:  "รูปแบบคำขอไม่ถูกต้อง",
+// 			Status:     "error",
+// 			Data:       nil,
+// 		})
+// 	}
+// 	claims, err := middleware.GetClaims(c)
+// 	if err != nil {
+// 		return c.Status(fiber.StatusUnauthorized).JSON(dto.BaseResponse{
+// 			StatusCode: fiber.StatusUnauthorized,
+// 			MessageEN:  "Unauthorized",
+// 			MessageTH:  "ไม่ได้รับอนุญาต",
+// 			Status:     "error",
+// 		})
+// 	}
+// 	errOnUpdate := h.svc.UpdateTask(c.Context(), id, req, claims.UserID)
+// 	if errOnUpdate != nil {
+// 		return c.Status(fiber.StatusBadRequest).JSON(dto.BaseResponse{
+// 			StatusCode: fiber.StatusBadRequest,
+// 			MessageEN:  errOnUpdate.Error(),
+// 			MessageTH:  "ไม่สามารถอัปเดต Task ได้",
+// 			Status:     "error",
+// 			Data:       nil,
+// 		})
+// 	}
+// 	return c.Status(fiber.StatusOK).JSON(dto.BaseResponse{
+// 		StatusCode: fiber.StatusOK,
+// 		MessageEN:  "Task updated successfully",
+// 		MessageTH:  "อัปเดต Task สำเร็จ",
+// 		Status:     "success",
+// 		Data:       nil,
+// 	})
+// }
 
 // @Summary Delete a task
 // @Description Delete a task by ID
@@ -395,7 +396,7 @@ func (h *TaskHandler) UpdateStepStatusNote(c *fiber.Ctx) error {
 // @Failure 400 {object} dto.BaseResponse
 // @Failure 404 {object} dto.BaseResponse
 // @Failure 500 {object} dto.BaseResponse
-// @Router /v2/tasks/{id} [put]
+// @Router /v1/tasks/{id} [put]
 func (h *TaskHandler) PutTaskV2(c *fiber.Ctx) error {
 	id := c.Params("id")
 
